concord_macros/tests/dsl/fail/fail_policies_rejects_default_retry.stderr
error: default retry policy is not allowed in policies block; use default { ... }
  --> tests/dsl/fail/fail_policies_rejects_default_retry.rs:13:13
   |
13 |             retry read
   |             ^^^^^
